instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:1: error: not found: value baissebrosse
baissebrosse()
^InstructionsDrawG:10: error: not found: value levebrosse
levebrosse()
^